[package]
name = "locator"
version = "0.1.1"
authors = ["Dave Yarwood <dave.yarwood@gmail.com>"]

[dependencies]
schemamama_rusqlite = { git = "https://github.com/cmsd2/schemamama_rusqlite" }
schemamama          = "0.2.1"
rusqlite            = "0.6.1"
time                = "0.1.35"
zmq                 = "0.8"
